# BCSTM-Player

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yml
romfs/lang/: de.json  en.json
romfs/themes/: default.json  flashbang.json  rd7tf.json
source/: app.cpp  app.hpp  bcstm_ctrl.hpp  bcstm_player.cpp  bcstm_player.hpp  colors.cpp  colors.hpp  config.hpp  cursor.hpp  filebrowser.cpp  filebrowser.hpp  id.hpp  info.hpp  inspector_view.cpp  inspector_view.hpp  inspector_view_bcwav.cpp  inspector_view_bcwav.hpp  lang.cpp  lang.hpp  main.cpp  main.cpp_bak  msg_handler.cpp  msg_handler.hpp  pd_ctr_ext.cpp  pd_ctr_ext.hpp  progressbar.hpp  settings.cpp  settings.hpp  stagemgr.cpp  stagemgr.hpp  stages.hpp
source/bcstm/: base.hpp  bcstmv2.cpp  bcstmv2.hpp  ctrff_decode.cpp  ctrff_decode.hpp
source/flex/: container.hpp  flex.hpp  objects.cpp  objects.hpp
